# inspectrum

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: tests.yml
docs/: getting-started.md  ground_truths.md  plan.md  project.md
scripts/: audit_fsq.py  debug_pressure_sweep.py  debug_snap_matching.py  diagnose_peaks.py  plotData.py  test_cryspy_symm.py  test_fwhm_plot.py  tune_peaks.py
src/inspectrum/: __init__.py  background.py  cli.py  crystallography.py  engine.py  eos.py  lattice.py  loaders.py  matching.py  models.py  peakfinding.py  plotting.py  resolution.py
src/inspectrum/ui/: __init__.py  dataPanel.py  mainWindow.py  model.py  phasePanel.py  resultsPanel.py  worker.py
tests/: test_background.py  test_cli.py  test_crystallography.py  test_engine.py  test_eos.py  test_lattice.py  test_loaders.py  test_matching.py  test_models.py  test_peakfinding.py  test_plotting.py  test_resolution.py
tests/test_data/: EntryWithCollCode211586_iceVII.cif  EntryWithCollCode211741_iceVII.cif  EntryWithCollCode43421_tungsten.cif  SNAP059056_all.gsa  SNAP059056_all_test-0.csv  SNAP059058_all.gsa  SNAP059058_all_test-0.csv  SNAP059059_all.gsa  SNAP059059_all_test-0.csv  SNAP059061_all.gsa  SNAP059061_all_test-0.csv  SNAP059062_all.gsa  SNAP059062_all.instprm  SNAP059062_all_test-0.csv  SNAP059063_all.gsa  SNAP059063_all_test-0.csv  snap_phases.json
