[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inspectrum"
version = "0.1.0"
description = "Pre-inspection of diffraction spectra for Rietveld refinement"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["science", "data", "processing", "spectroscopy", "diffraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

# Core dependencies — version floors aligned with GSAS-II compatibility
dependencies = [
    "numpy>=2.2.0",
    "scipy>=1.15.0",
    "matplotlib>=3.10.0",
    "h5py>=3.12.0",
    "pandas>=2.0.0",
    "cryspy>=0.10.0",
]

[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

# All optional dependencies
all = [
    "inspectrum[dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/your-repo"
Documentation = "https://github.com/yourusername/your-repo#readme"
Repository = "https://github.com/yourusername/your-repo"
Issues = "https://github.com/yourusername/your-repo/issues"

[project.scripts]
# Command-line interface (uncomment and customize after implementing CLI)
# inspectrum = "inspectrum.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
inspectrum = ["py.typed"]

# ── Pixi configuration ──────────────────────────────────────────────
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64"]

[tool.pixi.pypi-dependencies]
inspectrum = { path = ".", editable = true }
cryspy = ">=0.10.0"

[tool.pixi.dependencies]
python = ">=3.10,<3.14"
numpy = ">=2.2.0,<3"
scipy = ">=1.15.0,<2"
matplotlib-base = ">=3.10.0,<4"
h5py = ">=3.12.0,<4"
pandas = ">=2.0.0,<3"

[tool.pixi.tasks]
test = "pytest -v tests/"
inspect = { cmd = "python -c \"from inspectrum.loaders import load_mantid_csv; from inspectrum.plotting import inspect_peaks; s = load_mantid_csv('$1')[0]; inspect_peaks(s); import matplotlib.pyplot as plt; plt.show()\"", description = "Interactive peak inspection: pixi run inspect <csv_file>" }
inspect-matches = { cmd = "python scripts/debug_pressure_sweep.py", description = "Pressure-sweep match inspection with overlay plot and table output" }

# Development tools
[tool.pixi.feature.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
ruff = ">=0.1.0"
black = ">=23.0.0"
mypy = ">=1.5.0"
pre-commit = ">=3.4.0"

# Python version features (match GSAS-II supported range)
[tool.pixi.feature.py310.dependencies]
python = ">=3.10,<3.11"

[tool.pixi.feature.py311.dependencies]
python = ">=3.11,<3.12"

[tool.pixi.feature.py312.dependencies]
python = ">=3.12,<3.13"

[tool.pixi.feature.py313.dependencies]
python = ">=3.13,<3.14"

# Environments
[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }
py310 = { features = ["dev", "py310"], solve-group = "py310" }
py311 = { features = ["dev", "py311"], solve-group = "py311" }
py312 = { features = ["dev", "py312"], solve-group = "py312" }
py313 = { features = ["dev", "py313"], solve-group = "py313" }

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",                      # Show summary of all test outcomes
    "--strict-markers",         # Error on unknown markers
    "--strict-config",          # Error on unknown config options
    "--cov=src/inspectrum",     # Coverage for your package
    "--cov-report=term-missing", # Show missing lines in coverage
    "--cov-report=html",        # Generate HTML coverage report
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# Ruff configuration (linting and formatting)
[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex (let developers decide)
    "W191",   # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = [
    "ARG",    # Unused function arguments in tests are OK (fixtures)
    "S101",   # Assert statements are OK in tests
]

[tool.ruff.lint.isort]
known-first-party = ["inspectrum"]

# Black configuration (code formatting)
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

# MyPy configuration (type checking)
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for stricter type checking
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
